US36: Implementer json som export/import format (Done)